--- a/portfolio-front/src/components/profil/Profil.scss
+++ b/portfolio-front/src/components/profil/Profil.scss
@@ -1,7 +1,19 @@
 .Profil{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width:78vw;
     margin-left: 20vw;
     height: 100vh;
     background-color: var(--second-background-color);
-    color: white
+    color: white;
+
+    .profil-picture{
+        width: 300px;
+        border-radius: 15px;
+        -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+        box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+        border: 2px solid #000000;
+    }
 }
