--- a/portfolio-front/src/components/career/Career.scss
+++ b/portfolio-front/src/components/career/Career.scss
@@ -1,7 +1,8 @@
 .Career{
-    width:78vw;
-    margin-left: 20vw;
+    width:80%;
+    margin-left: 20%;
     height: 100vh;
     background-color: var(--second-background-color);
-    color: white
+    color: white;
+    max-width: 80%;
 }
