--- a/portfolio-front/src/components/navbar/Navbar.scss
+++ b/portfolio-front/src/components/navbar/Navbar.scss
@@ -1,14 +1,18 @@
 .Navbar{
     
     position: fixed;
-    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    width: 20%;
     background-color: var(--main-background-color);
     color: var(--second-text-color);
     height: 100vh;
+    justify-content: space-between;
+    max-width: 20%;
 }
 
 .logo-container{
-    width: 10vw;
+    width: 150px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -29,10 +33,21 @@
 
 .navigation-list{
     list-style-type:none;
-    
+
 }
 
 .bottom-container{
-    display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+}
+
+.navigation-bottom-list{
+    display: flex;
+    list-style-type:none;
+    
+    
 }
