--- a/portfolio-front/src/components/profil/Profil.scss
+++ b/portfolio-front/src/components/profil/Profil.scss
@@ -3,11 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width:78vw;
-    margin-left: 20vw;
+    width:80%;
+    margin-left: 20%;
     height: 100vh;
     background-color: var(--second-background-color);
     color: white;
+    max-width: 80%;
 
     .profil-picture{
         width: 300px;
