--- a/portfolio-front/src/components/profil/Profil.scss
+++ b/portfolio-front/src/components/profil/Profil.scss
@@ -15,6 +15,6 @@
         border-radius: 15px;
         -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
         box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-        border: 2px solid #000000;
+        border: 2px solid var(--second-background-color);
     }
 }
